# stemscore

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.clinerules/: 01-project.md
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/workflows/: ci.yml  claude.yml
src/stemscore/: app.py  cli.py  config.py  i18n.py  pipeline.py  preview.py  router.py
src/stemscore/analyzer/: __init__.py  key_detect.py  tempo.py  time_sig.py
src/stemscore/assembler/: __init__.py  exporter.py  merger.py  quantizer.py
src/stemscore/separator/: __init__.py  demucs_wrapper.py
src/stemscore/suno/: __init__.py  importer.py
src/stemscore/transcriber/: __init__.py  chord_recognizer.py  drum_transcriber.py  pitch_transcriber.py
src/stemscore/utils/: __init__.py  audio_io.py  exceptions.py
tests/: test_app.py  test_pipeline.py  test_preview.py
tests/test_analyzer/: test_key_detect.py  test_tempo.py  test_time_sig.py
tests/test_assembler/: test_exporter.py  test_merger.py  test_quantizer.py
tests/test_separator/: test_demucs_wrapper.py
tests/test_suno/: test_importer.py
tests/test_transcriber/: test_chord_recognizer.py  test_drum_transcriber.py  test_pitch_transcriber.py
tests/test_utils/: test_audio_io.py
